# libhildonmime

./: ChangeLog  autogen.sh  configure.ac  configure.in  libhildonmime.pc.in
data/: uri-action-defaults.list
debian/: changelog  control  hildon-update-category-database.install  hildon-update-category-database.postinst  hildon-update-category-database.postrm  hildon-update-category-database.triggers  libhildonmime-dev.install  libhildonmime.docs  libhildonmime0.docs  libhildonmime0.install  rules
docs/: Makefile.am  hildon-uri-open-rev-2.txt  libhildonmime-docs.xml
libhildonmime/: Makefile.am  hildon-mime-categories.c  hildon-mime-icon.c  hildon-mime-open.c  hildon-mime.h  hildon-uri.c  hildon-uri.h  update-category-database.c  update-desktop-database.c
tests/: Makefile.am  test-all.c  test-mime-category.c  test-mime-icon.c  test-mime-patterns.c  test-open.c  test-service.c  test-uri.c
tests/datadir/applications/test/: browser.desktop  hildon-control-panel.desktop  hwr-teacher.desktop  image-viewer.desktop  mp_ui.desktop  osso-addressbook.desktop  osso-backup.desktop  osso-global-search.desktop
